--- a/Emoji.html
+++ b/Emoji.html
@@ -10,6 +10,8 @@
 	<div class="poop-container">
 		<img id="poop" src="ressources/Emoji/poop.png">
 		<img id="sad" src="ressources/Emoji/sad.png">
+		<img id="poop" src="ressources/Emoji/tongue.png">
+		<img id="poop" src="ressources/Emoji/hearth.png">
 	</div>
 </body>
 </html>
