--- a/Puzzle.html
+++ b/Puzzle.html
@@ -9,7 +9,7 @@
 	<header><img class="logo" src="ressources/logo_hack.png"></header>
 	<div class="theme">
 		Casse tête ici / Puzzle here <br />
-		<img id="poop" src="ressources/logo_hack.png">
+		images : ressources/Puzzle
 	</div>
 </body>
 </html>
