--- a/Emoji.html
+++ b/Emoji.html
@@ -8,10 +8,10 @@
 <body>
 	<header><img class="logo" src="ressources/logo_hack.png"></header>
 	<div class="poop-container">
-		<img id="poop" src="ressources/Emoji/poop.png">
+		<img class="poop" src="ressources/Emoji/poop.png">
 		<img id="sad" src="ressources/Emoji/sad.png">
-		<img id="poop" src="ressources/Emoji/tongue.png">
-		<img id="poop" src="ressources/Emoji/hearth.png">
+		<img class="poop" src="ressources/Emoji/tongue.png">
+		<img class="poop" src="ressources/Emoji/hearth.png">
 	</div>
 </body>
 </html>
