--- a/Puzzle.html
+++ b/Puzzle.html
@@ -6,10 +6,15 @@
 	<link rel="stylesheet" type="text/css" href="Puzzle.css">
 </head>
 <body>
-	<header><img class="logo" src="ressources/logo_hack.png"></header>
-	<div class="theme">
-		Casse tête ici / Puzzle here <br />
-		images : ressources/Puzzle
-	</div>
+<header><img class="logo" src="ressources/logo_hack.png"></header>
+<div class="theme">
+	Casse tête ici / Puzzle here <br />
+	images : ressources/Puzzle
+	<img src="ressources/puzzle/owl.png" id="owl" alt="">
+	<img src="ressources/puzzle/glasses.png" id="glasses" alt="">
+	<img src="ressources/puzzle/line.png" id="line" alt="">
+	<img src="ressources/puzzle/ville_2.png" id="ville2" alt="">
+	<img src="ressources/puzzle/ville.png"  id="ville" alt="">
+</div>
 </body>
 </html>
