--- a/Puzzle.html
+++ b/Puzzle.html
@@ -8,8 +8,11 @@
 <body>
 	<header><img class="logo" src="ressources/logo_hack.png"></header>
 	<div class="theme">
-		Casse tête ici / Puzzle here <br />
-		images : ressources/Puzzle
+        <img id="ville1" src="/ressources/Puzzle/ville.png" />
+        <img id="ville2" src="/ressources/Puzzle/ville_2.png" />
+        <img id="line" src="/ressources/Puzzle/line.png" />
+        <img id="glasses" src="/ressources/Puzzle/glasses.png" />
+        <img id="owl" src="/ressources/Puzzle/owl.png" />
 	</div>
 </body>
 </html>
